data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1100.wast
;; 1. **Test One**:    - A `br_table` with an index far greater than the number of entries in the table, targeting a `loop` block with an empty body.    - **Constraint**: Checks if out-of-bounds indices in `br_table` result in handling of the default target.    - **Relation**: Validates that the implementation handles index overflow properly by checking the default branch mechanism.

(assert_invalid
  (module
    (func
      (block
        (loop (block (br_table 10 0)))
      )
    )
  )
  "type mismatch"
)